# ptygrid

./: .gitignore  CONTRACT.md  README.en.md  README.md  index.html  mterm.example.yml  package-lock.json  package.json  ptygrid.example.yml  router.settings.json  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
docs/: README.md  autonomous-operation-guide.md  competitive-landscape.en.md  competitive-landscape.md  design.en.md  design.md  phase3.md  phase5-6.md  plan.md  porting.en.md  porting.md  ptygrid-secrets-3ways.md  ptygrid-yml-guide.md  queen-universal-register.md  secrets.md  spec-agent-status.md  spec-claude-teams-panes.md  spec-notifications.md  spec-phase5-0.md  spec-phase5-5.md  spec-phase6-0.md  spec-team-presets.md  troubleshooting.en.md  troubleshooting.md  userguide.en.md  userguide.md  verify-team-preset.md
docs/inside/: phase5-6.md  spec-phase5-0.md  spec-phase5-5.md  spec-phase6-0.md
docs/research/: claude-code-teams-research.md  cmux-research.md
example/: README.md
example/basic/: ptygrid.yml
example/multi-agent/: ptygrid.yml
example/team-preset/: ptygrid.yml
example/teammates/: ptygrid.yml
example/web-dev/: ptygrid.yml
example/worktree/: ptygrid.yml
scripts/: queen-send.py
src/: App.svelte  main.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/mcp-server-check/: Cargo.toml
src-tauri/mcp-server-check/src/: main.rs
src-tauri/pty-core-check/: Cargo.toml
src-tauri/pty-core-check/src/: main.rs
src-tauri/src/: agent_status.rs  agent_status_defaults.yml  ansi.rs  app_settings.rs  commands.rs  config.rs  git_service.rs  lib.rs  main.rs  notifications.rs  orchestrator.rs  orchestrator.rs.bak  project_state.rs  pty.rs  queen.rs  queen_store.rs  resource_monitor.rs  session.rs  team_presets.rs  teams_hooks.rs  teams_host.rs  token_store.rs  transcript.rs  trust.rs  worktree.rs
src-tauri/src/queen_compat/: capabilities.rs  config.rs  deprecation.rs  header.rs  initialize.rs  meta.rs  mod.rs  route.rs
src-tauri/teams-backend/: Cargo.toml
src-tauri/teams-backend/src/: host.rs  lib.rs  mock.rs  protocol.rs  server.rs  shim.rs  shim_client.rs
src-tauri/teams-backend/tests/: server_rpc.rs  shim_e2e.rs
src-tauri/tests/: queen_compat_integration.rs
src/lib/: GitPanel.svelte  StatusSidebar.svelte  Terminal.svelte  TranscriptPane.svelte  WorkflowPanel.svelte  app-environment-shim.ts  broadcast.ts  i18n.svelte.ts  stores.svelte.ts  tauri.ts  terminals.ts  types.ts
