# Keep this crate independent from the pty-core-check smoke-test crate.
[workspace]

[package]
name = "ptygrid"
version = "0.1.0"
edition = "2021"
description = "Multi-agent terminal workspace with PTY grid orchestration"
authors = ["zephel01"]

[lib]
name = "ptygrid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
portable-pty = "0.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9"
notify = "8"
rmcp = { version = "1.8", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
] }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
tokio-util = "0.7"
sysinfo = { version = "0.39", default-features = false, features = ["system"] }
rusqlite = { version = "0.40", features = ["bundled"] }
# Tauri's recommended fix for GUI launches not inheriting the user's shell PATH
# on Linux/macOS (also covers Windows PATH inheritance edge cases).
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs", rev = "c4c45d503ea115a839aae718d02f79e7c7f0f673" }

[dev-dependencies]
# Enables tauri::test::mock_app() (MockRuntime) for session state-machine tests.
tauri = { version = "2", features = ["test"] }
