# Keep this crate independent from the pty-core-check smoke-test crate.
# teams-backend is a path dependency that keeps its OWN independent [workspace];
# exclude it here so Cargo treats it as an external workspace root rather than a
# member of this one (both crates stay independent workspaces).
[workspace]
exclude = ["teams-backend"]

[package]
name = "ptygrid"
version = "0.4.9"
edition = "2021"
description = "Multi-agent terminal workspace with PTY grid orchestration"
authors = ["zephel01"]

[lib]
name = "ptygrid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
portable-pty = "0.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9"
notify = "8"
# Phase 4.4.0: compiled regex for agent-status detection (built once, cached;
# never compiled on the hot path).
regex = "1"
rmcp = { version = "1.8", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
] }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
tokio-util = "0.7"
sysinfo = { version = "0.39", default-features = false, features = ["system"] }
rusqlite = { version = "0.40", features = ["bundled"] }
# Phase 4.0: OS CSPRNG for the per-run teammate hook bearer token.
getrandom = "0.2"
# Phase 4.2: teams pane-backend (JSON-RPC 2.0 socket server + tmux shim logic).
# Independent crate ([workspace] of its own); consumed here by path.
teams-backend = { path = "teams-backend" }
# Tauri's recommended fix for GUI launches not inheriting the user's shell PATH
# on Linux/macOS (also covers Windows PATH inheritance edge cases).
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs", rev = "c4c45d503ea115a839aae718d02f79e7c7f0f673" }
# Phase 4.4.2: out-of-app notifications.
# tauri-plugin-notification: cross-platform desktop OS toast (macOS/Linux/Windows),
# invoked from the backend on session/agent-status edges.
tauri-plugin-notification = "2"
# ureq: tiny blocking HTTP client for the chat webhooks (Slack/Mattermost/Discord/
# Telegram). Each send runs on a detached thread, so blocking I/O never touches
# the PTY reader or the async runtime. `json` for bodies, `tls` (rustls) for HTTPS.
ureq = { version = "2", features = ["json", "tls"] }

[dev-dependencies]
# Enables tauri::test::mock_app() (MockRuntime) for session state-machine tests.
tauri = { version = "2", features = ["test"] }
# Phase 4.2: base64 for the socket-server end-to-end host test (write payload).
base64 = "0.22"
