[workspace]

[package]
name = "mcp-server-check"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "1.8", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "client",
    "transport-streamable-http-client-reqwest",
] }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
